--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <p style="margin-inline-end: 5px;"id="balance_p" class="text">Balance: <span id="balance">... SOL</span></p>
     <br>
     <br>
+    <form method="post">
     <input
         type = "text"
         placeholder = "Receiver's Address"
@@ -88,6 +89,7 @@
     <br>
     <br>
     <button class="button" onclick="SendPhantom()">Transact Solana</button>
+    </form>
     <br>
     <br>
     <p style="margin-inline-end: 5px;"id="tranotify_p" class="text"> <span id="tranotify">Let's Transact</span></p>
